# latex-ocr

./: .gitignore  LICENSE  README.md  pyproject.toml
src/latex_ocr/: __init__.py  cli.py  clipboard.py  recognizer.py
