[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latex-ocr"
version = "0.1.0"
description = "从图片或剪贴板识别数学公式，输出 LaTeX"
readme = "readme.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jiang Peng" }]
keywords = ["latex", "ocr", "math", "formula", "recognition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pix2text>=1.0",
    "Pillow>=9.0",
]

[project.optional-dependencies]
clipboard = [
    "pyobjc-core>=9.0",
    "pyobjc-framework-Cocoa>=9.0",
]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[project.scripts]
latex-ocr = "latex_ocr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
